# cpp-mcp

./: .containerignore  .gitignore  CMakeLists.txt  Containerfile.oel8  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_smoke.cpp
build-security-clang/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
configs/: README.md  github.json  gitlab.json  jira.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  PLUGINS.md  SECURITY.md
examples/: example_calculator.cpp  example_server.cpp  github_server.cpp
include/mcp/: mcp.hpp
include/mcp/auth/: auth.hpp
include/mcp/client/: client.hpp
include/mcp/core/: errors.hpp  json_utils.hpp  log.hpp  types.hpp
include/mcp/gateway/: api_gateway.hpp
include/mcp/server/: server.hpp  signal_handler.hpp
include/mcp/transport/: http_server_transport.hpp  http_transport.hpp  stdio_transport.hpp  transport.hpp
src/auth/: auth.cpp
src/client/: client.cpp
src/gateway/: api_gateway.cpp
src/server/: server.cpp
src/transport/: http_server_transport.cpp  http_transport.cpp  stdio_transport.cpp
tests/: auth_tests.cpp  cpp_mcp_tests.cpp
